--- a/src/assets/css/common/Button.css
+++ b/src/assets/css/common/Button.css
@@ -1,20 +1,21 @@
-.btn-primary {
-  background-color: var(--erp-violet-600);
+.btn_primary {
+  background-color: var(--erp-sidebar-color);
   border: var(--erp-sky-500);
 }
 
-.btn-outline-primary {
-  color: var(--erp-sky-500);
-  border-color: var(--erp-sky-500);
+.btn_outline_primary {
+  color: var(--erp-sidebar-color);
+  border-color: var(--erp-sidebar-color);
 }
 
-.btn-outline-primary:hover {
-  background-color: var(--erp-sky-500);
-  border: var(--erp-sky-500);
+.btn_outline_primary:hover {
+  background-color: var(--erp-sidebar-color);
+  border: var(--erp-sidebar-color);
+  color:var(--erp-card-color)
 }
 
-.btn-primary:hover {
-  background-color: var(--erp-sky-400);
+.btn_primary:hover {
+  background-color: var(--erp-sidebar-color);
 }
 
 .btn-load .spinner-border {
