--- a/src/assets/css/common/Card.css
+++ b/src/assets/css/common/Card.css
@@ -4,11 +4,15 @@ body {
 
 .card-number {
     font-size: var(--erp-fs-14);
-    font-weight: var(--erp-font-weight-regular);
+    font-weight: var(--erp-fw-400);
 }
-
+.pfsize{
+    font-size:var(--erp-fs-14) ;
+    font-weight: var(--erp-fw-400);
+}
 .card-body .dollar {
     font-size: var(--erp-fs-22);
+    font-weight: var(--erp-fw-600);
 }
 .Totalearning{
     transition:all 0.3s linear;
@@ -16,7 +20,7 @@ body {
  }
  .Totalearning:hover{
      transform: translateY(-7px);
-     box-shadow: 0px 5px 0px 5px solid grey;
+     box-shadow: 0px 5px 0px 5px solid var(--erp-gray-color);
  }
  .orders{
  
