--- a/src/assets/css/common/WhatsappChat.css
+++ b/src/assets/css/common/WhatsappChat.css
@@ -54,7 +54,7 @@ p{
     margin-inline-end: 0px;
 }
 .success-bg-subtle{
-    background-color: #f3f6f9 !important;
+    background-color: var(--erp-light-gray) !important;
 }
 .chat-dropdown-toggle::after{
     display: none !important;
@@ -83,11 +83,11 @@ small{
     max-width: 90px !important;
 }
 
-.left{
+.chat-left{
     align-self: self-start;
     text-align: left;
 }
-.right{
+.chat-right{
  align-self: self-end;
     text-align: right;
 }
@@ -99,29 +99,42 @@ small{
 }
 .chat-conversation .conversation-list .message-img .message-img-link li .img-doticons {
     font-size: var(--erp-fs-17);
-    color: #fff;
+    color: var(--erp-white-color);
     display: inline-block;
     line-height: 20px;
     width: 26px;
     height: 24px;
     border-radius: 3px;
-    background-color: rgba(33, 37, 41, .7);
+    background-color: var(--erp-lightblack-color);
     text-align: center;
 }
 .msg-img-link ul .list-inline {
     position: relative;
    bottom: 25px;
 }
-.btn-info {
+.btn_info {
   background-color:var( --erp-sky-400) !important;
   border-color: var( --erp-sky-400)!important;
+  color: var(--erp-white-color);
   
 }
-.btn-info:hover{
-    background-color: var( --erp-sky-400) !important;
-    border-color: var( --erp-sky-400) !important;
+.btn_info:hover{
+    background-color: var( --erp-sky-color) !important;
+    border-color: var( --erp-sky-color) !important;
+    color: var(--erp-white-color);
+    
 
 }
+.text_mute{
+    color: var(--erp-text-mute) ;
+}
+.text_white{
+    color: var(--erp-white-color);
+}
+.text_success{
+   color: var(--erp-green-400);
+}
+
 .bg-light {
  
     background-color: var( --erp-white-color) !important;
@@ -138,21 +151,21 @@ small{
 @media screen and (max-width:2560px) {
     
         .simplebar-content-wrapper {
-            height: 600px;
+            height: 550px;
         }
     
 }
 @media screen and (max-width:1024px) {
     
     .simplebar-content-wrapper {
-        height: 540px;
+        height: 460px;
     }
 
 }
 @media screen and (max-width:768px) {
     
     .simplebar-content-wrapper {
-        height: 530px;
+        height: 450px;
     }
 
 }
