--- a/src/assets/css/common/Sidemenu.css
+++ b/src/assets/css/common/Sidemenu.css
@@ -7,6 +7,9 @@
   background-color: #fafbfe;
   /* margin-left: 18%; */
 }
+a {
+  color: #abb9e8;
+}
 
 .wrapper {
   display: flex;
@@ -23,7 +26,7 @@
   height: 100vh;
   transition: all 0.1s ease-in-out;
   background-color: var(--erp-sidebar-color);
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   /* position: fixed;
   top: 0;
   left: 0;
