some ui changes

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+
   box-sizing: border-box;
   font-family: "Poppins", sans-serif !important;
   word-wrap: break-word;
@@ -18,12 +19,12 @@ body {
   --erp-orange-500: #f06548;
   --erp-orange-600: #da3412;
   --erp-light-blue-color: #abb9e8;
-  --erp-light-gray:#e9ebec;
+  --erp-light-gray: #e9ebec;
   --erp-gray-color: #878a99;
   --erp-white-color: #fff;
   --erp-sky-500: #405189;
   --erp-sky-300: #7dd3fc;
- 
+
 
   --erp-sky-400: #2385ba;
   --erp-sky-light: #dff0fa;
@@ -39,14 +40,15 @@ body {
   /* Gray / Zinc */
   --erp-gray-100: #f4f4f5;
   --erp-gray-200: #e4e4e7;
+  
   --erp-gray-300: #d4d4d8;
-  --erp-gray-400: #a1a1aa;
+  --erp-gray-400: #b3b9d0;
   --erp-gray-500: #71717a;
   --erp-gray-600: #52525b;
   --erp-gray-700: #3f3f46;
   --erp-gray-800: #27272a;
   --erp-gray-900: #18181b;
-
+--erp-gray-1000: #b3b9d0;
   /* Green */
 
   --erp-green-100: #dcfce7;
@@ -58,6 +60,7 @@ body {
   --erp-green-700: #15803d;
   --erp-green-800: #166534;
   --erp-green-900: #14532d;
+  --erp-light-green:#0ab39c;
 
   /* Red */
 
@@ -186,8 +189,8 @@ body {
 
 
   /* background colors*/
- --erp-bg-light: rgb(248 249 250);
- 
+  --erp-bg-light: rgb(248 249 250);
+
 
 }
 
@@ -217,7 +220,7 @@ body {
 } */
 
 .App {
-  background-color: var(--erp-bg-color);
+  background-color: #f3f3f9;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -241,23 +244,23 @@ body {
 }
 
 .font-weight-100 {
-  font-weight: var( --erp-fw-100);
+  font-weight: var(--erp-fw-100);
 }
 
 .font-weight-300 {
-  font-weight: var( --erp-fw-300);
+  font-weight: var(--erp-fw-300);
 }
 
 .font-weight-400 {
-  font-weight: var( --erp-fw-400);
+  font-weight: var(--erp-fw-400);
 }
 
 .font-weight-500 {
-  font-weight: var( --erp-fw-500);
+  font-weight: var(--erp-fw-500);
 }
 
 .font-weight-700 {
-  font-weight: var( --erp-fw-700);
+  font-weight: var(--erp-fw-700);
 }
 
 .main_menu i {
@@ -316,7 +319,7 @@ body,
   width: 100%;
   /* font-family: "Source Sans Pro", sans-serif; */
   /* font-family: "Nunito", sans-serif; */
-  background-color: var(--erp-bg-color);
+  /* background-color: var(--erp-bg-color); */
 }
 
 ::-webkit-scrollbar {
