--- a/src/assets/css/common/Forms.css
+++ b/src/assets/css/common/Forms.css
@@ -56,10 +56,9 @@
     color: var(--erp-card-color)
 }
 
-.btn_success {
-    background-color: var(--erp-green-600) !important;
-    border-color: var(--erp-green-600) !important;
-    color: var(--erp-card-color)
+.btn_sucess{
+    background-color: var(--erp-light-green);
+    color:var(--erp-card-color)
 }
 
 
@@ -78,11 +77,11 @@
 }
 
 .success_outline {
-    border-color: var(--erp-green-600);
+    border-color: var(--erp-light-green);
 }
 
 .success_outline:hover {
-    background-color: var(--erp-green-600);
+    background-color: var(--erp-light-green);
     color: var(--erp-card-color)
 }
 
@@ -105,6 +104,17 @@
 .bg_white {
     background-color: var(--erp-bg-white);
 }
+.bg_transparent{
+    background-color:var(--erp-bg-white);
+}
+.bg-form{
+    background-color: var(--erp-bg-white);
+    border-color:var(--erp-card-color);
+    color:var(--erp-text-color)
+}
+.txt-color{
+    color:var(--erp-text-color) 
+}
 
 /* page*/
 .page-item.active.square {
@@ -115,4 +125,12 @@
 .page-link.rounded.col {
     background-color: var(--erp-sidebar-color);
     color: var(--erp-card-color)
+}
+.form-control:focus {
+     color: var(--erp-gray-800);
+    background-color: var(--erp-bg-white);
+    border-color: var(--erp-gray-400)!important; 
+    outline: 0;
+    -webkit-box-shadow: 0 0 1 0.25rem rgba(var(--vz-primary-rgb), .25);
+    box-shadow: 0 0 1 0.25rem rgba(var(--vz-primary-rgb), .25); 
 }
