--- a/src/assets/css/common/Login.css
+++ b/src/assets/css/common/Login.css
@@ -66,7 +66,7 @@
 }
 
 .card {
-  box-shadow: 0 1px 2px var(--erp-black-300);
+  /* box-shadow: 0 1px 2px var(--erp-black-300); */
   /* margin-bottom: 1.5rem; */
   border-radius: 4px !important;
 }
