--- a/src/assets/css/common/Sidemenu.css
+++ b/src/assets/css/common/Sidemenu.css
@@ -26,7 +26,7 @@ a {
   height: 100vh;
   transition: all 0.1s ease-in-out;
   background-color: var(--erp-sidebar-color);
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   /* position: fixed;
   top: 0;
   left: 0;
