--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f3f3f9 !important;
 }
 
 :root,
@@ -25,7 +26,8 @@ body {
   --erp-sky-300: #7dd3fc;
  
 
-  --erp-sky-400: #2385ba;
+  --erp-sky-400: #299cdb;
+
   --erp-sky-light: #dff0fa;
   --erp-yellow-color: #d19b3d;
   --erp-lightblack-color: #2e353d;
@@ -40,7 +42,7 @@ body {
   --erp-gray-100: #f4f4f5;
   --erp-gray-200: #e4e4e7;
   --erp-gray-300: #d4d4d8;
-  --erp-gray-400: #a1a1aa;
+  --erp-gray-400: #878a99;
   --erp-gray-500: #71717a;
   --erp-gray-600: #52525b;
   --erp-gray-700: #3f3f46;
@@ -56,12 +58,13 @@ body {
   --erp-green-500: #0ab39c;
   --erp-green-600: #16a34a;
   --erp-green-700: #15803d;
-  --erp-green-800: #166534;
+  --erp-green-800: #099885;
   --erp-green-900: #14532d;
+
 
   /* Red */
 
-  --erp-red-100: #fee2e2;
+  --erp-red-100: #fde8e4;
   --erp-red-200: #fecaca;
   --erp-red-300: #fca5a5;
   --erp-red-400: #f87171;
@@ -89,7 +92,7 @@ body {
   --erp-blue-200: #add8e6;
   --erp-blue-300: #87ceeb;
   --erp-blue-400: #87cefa;
-  --erp-blue-500: #00bfff;
+  --erp-blue-500: #2385ba ;;
   --erp-blue-600: #1e90ff;
   --erp-blue-700: #6495ed;
   --erp-blue-800: #4682b4;
@@ -202,6 +205,7 @@ body {
   --erp-sky-300: #7dd3fc;
   --text-color: #fff;
   --erp-text-mute: #a3a3a3; */
+ 
   --erp-bg-color: #1a1d21;
   --erp-card-color: #212529;
   --erp-navbar-color: #292e32;
@@ -217,7 +221,7 @@ body {
 } */
 
 .App {
-  background-color: var(--erp-bg-color);
+  background-color: #f3f3f9;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -314,9 +318,6 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  /* font-family: "Source Sans Pro", sans-serif; */
-  /* font-family: "Nunito", sans-serif; */
-  background-color: var(--erp-bg-color);
 }
 
 ::-webkit-scrollbar {
