--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
   /* Gray / Zinc */
   --erp-gray-100: #f4f4f5;
   --erp-gray-200: #e4e4e7;
-  
+
   --erp-gray-300: #d4d4d8;
   --erp-gray-400: #b3b9d0;
   --erp-gray-500: #71717a;
@@ -50,7 +50,7 @@ body {
   --erp-gray-700: #3f3f46;
   --erp-gray-800: #27272a;
   --erp-gray-900: #18181b;
---erp-gray-1000: #b3b9d0;
+  --erp-gray-1000: #b3b9d0;
   /* Green */
 
   --erp-green-100: #c7f7d8;
@@ -64,8 +64,7 @@ body {
   --erp-green-900: #14532d;
   --erp-green-800: #166534;
   /* --erp-green-900: #14532d; */
-  --erp-light-green:#0ab39c;
-
+  --erp-light-green: #0ab39c;
 
   /* Red */
 
@@ -97,7 +96,7 @@ body {
   --erp-blue-200: #add8e6;
   --erp-blue-300: #87ceeb;
   --erp-blue-400: #87cefa;
-  --erp-blue-500: #2385ba ;;
+  --erp-blue-500: #2385ba;
   --erp-blue-600: #1e90ff;
   --erp-blue-700: #6495ed;
   --erp-blue-800: #4682b4;
@@ -195,8 +194,6 @@ body {
 
   /* background colors*/
   --erp-bg-light: rgb(248 249 250);
-
-
 }
 
 /* Dark mode colors */
@@ -208,7 +205,7 @@ body {
   --erp-sky-300: #7dd3fc;
   --text-color: #fff;
   --erp-text-mute: #a3a3a3; */
- 
+
   --erp-bg-color: #1a1d21;
   --erp-card-color: #212529;
   --erp-navbar-color: #292e32;
@@ -329,7 +326,7 @@ body,
   width: 100%;
   /* font-family: "Source Sans Pro", sans-serif; */
   /* font-family: "Nunito", sans-serif; */
-  /* background-color: var(--erp-bg-color); */
+  background-color: var(--erp-bg-color);
 }
 
 ::-webkit-scrollbar {
@@ -364,4 +361,8 @@ body,
 
 .text_danger {
   color: var(--erp-red-500) !important;
+}
+
+.text_color {
+  color: var(--erp-text-color) !important;
 }
