--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #f3f3f9 !important;
 }
-
+ .table td,
+    .table th {
+      line-height: 1.5;
+    }
 :root,
 [data-erp-theme="light"] {
   /* color #4676a0*/
