--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 body {
   margin: 0;
   padding: 0;
-
   box-sizing: border-box;
   font-family: "Poppins", sans-serif !important;
   word-wrap: break-word;
@@ -11,10 +10,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #f3f3f9 !important;
 }
- .table td,
-    .table th {
-      line-height: 1.5;
-    }
+html,
+body,
+#root,
+.App,
+.content {
+  height: 100%;
+  width: 100%;
+}
+.table td,
+.table th {
+  line-height: 1.5;
+}
 :root,
 [data-erp-theme="light"] {
   /* color #4676a0*/
@@ -155,7 +162,7 @@ body {
 
   /* Changing colors */
 
-  --erp-bg-color: #fff;
+  --erp-bg-color: #f3f3f9;
   --erp-card-color: #fff;
   --erp-navbar-color: #fff;
   --erp-sidebar-color: #405189;
@@ -194,9 +201,6 @@ body {
   --erp-font-l-bold-lh: 18px 700 1.8;
   --erp-font-xl-bold-lh: 20px 700 2;
   /* Extra Large, Bold, Line Height 2.0 */
-
-  /* background colors*/
-  --erp-bg-light: rgb(248 249 250);
 }
 
 /* Dark mode colors */
@@ -225,7 +229,7 @@ body {
 } */
 
 .App {
-  background-color: #f3f3f9;
+  background-color: var(--erp-bg-color);
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -320,17 +324,6 @@ h1 {
 }
 
 /* ---- */
-html,
-body,
-#root,
-.App,
-.content {
-  height: 100%;
-  width: 100%;
-  /* font-family: "Source Sans Pro", sans-serif; */
-  /* font-family: "Nunito", sans-serif; */
-  background-color: var(--erp-bg-color);
-}
 
 ::-webkit-scrollbar {
   width: 3px;
