--- a/src/components/pages/Student/studentRegistrationForm/RegistrationForm.css
+++ b/src/components/pages/Student/studentRegistrationForm/RegistrationForm.css
@@ -3,12 +3,15 @@
   margin: auto;
   background: var(--erp-card-color);
   padding: 20px;
-  border: 1px solid;
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+  border-radius: 2px;
 }
 
 .registration_form_tabs .button_grp {
   width: 100%;
   display: flex;
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+  border-radius: 2px;
 }
 
 .registration_form_tabs .button_grp .form_tab_btn {
@@ -62,23 +65,31 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.controls .control_next_btn {
-  padding: 10px;
+.reg_btn {
+  font-size: var(--erp-fs-s);
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+  padding: 5px;
   border: none;
   outline: none;
+  border-radius: 3px;
+  display: flex;
+  align-items: start;
+  justify-content: space-around;
+  gap: 10px;
+  position: relative;
+}
+
+.controls .control_next_btn {
   background-color: var(--erp-green-500);
-  border-radius: 5px;
   color: #fff;
   order: 2;
-  align-content: end;
 }
 
 .control_prev_btn {
   order: 1;
-  padding: 10px;
-  border: none;
-  outline: none;
   background-color: var(--erp-input-bg-color);
-  border-radius: 5px;
   color: var(--erp-text-color);
+}
+
+.button_icons {
 }
