--- a/src/assets/css/common/Sidemenu.css
+++ b/src/assets/css/common/Sidemenu.css
@@ -1,4 +1,3 @@
-
 .main_sidebar {
   /* min-height: 100vh; */
   width: 100%;
@@ -23,7 +22,7 @@
   height: 100vh;
   transition: all 0.1s ease-in-out;
   background-color: var(--erp-sidebar-color);
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   /* position: fixed;
   top: 0;
   left: 0;
@@ -99,6 +98,7 @@ a.sidebar-link:hover {
   top: 0;
   left: 70px;
   background-color: var(--erp-sky-500);
+  color: #fff;
   padding: 0;
   min-width: 15rem;
   display: none;
@@ -108,7 +108,8 @@ a.sidebar-link:hover {
   position: absolute;
   top: 0;
   left: 70px;
-  background-color: var(--erp-sky-500);
+  background-color: var(--erp-sidebar-color);
+  color: red !important;
   padding: 0;
   min-width: 15rem;
   display: none;
