--- a/src/index.css
+++ b/src/index.css
@@ -218,8 +218,8 @@ body,
 
 .App {
   background-color: var(--erp-bg-color);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   position: relative;
 }
@@ -282,7 +282,9 @@ body,
 .fw-500 {
   font-weight: var(--erp-fw-500);
 }
-
+.fw-600{
+  font-weight: var(--erp-fw-600);
+}
 .fw-700 {
   font-weight: var(--erp-fw-700);
 }
@@ -333,12 +335,17 @@ a {
 .button_color {
   color: var(--erp-white-color) !important;
 }
+.form-control
+#border_none{
+  border: none;
+}
 
 .card {
   border-radius: 0.375rem !important;
   margin-bottom: 1.5rem;
   -webkit-box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+  border: 0px;
 }
 .card-header {
   padding: 1rem 1rem;
@@ -507,6 +514,15 @@ h1 {
 }
 
 /* settings tabs */
-.bg-danger-subtle { 
+.bg-danger-subtle {
   background-color: #a0add8 !important;
+}
+.card_animate {
+  transition: all 0.3s linear;
+webkit-box-shadow: 0 1px 2px rgba(56,65,74,.15);
+  /* box-shadow: 0px 5px 0px 5px solid var(--erp-gray-color); */
+}
+.card_animate:hover {
+  transform: translateY(-7px);
+    box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
 }
