--- a/src/components/pages/Student/studentRegistrationForm/RegistrationForm.css
+++ b/src/components/pages/Student/studentRegistrationForm/RegistrationForm.css
@@ -14,7 +14,7 @@
 }
 
 .registration_form_tabs .button_grp .form_tab_btn {
-  width: 100%;
+  width: 100% !important;
   margin: auto;
   padding: 10px;
   border: none;
@@ -48,6 +48,7 @@
   content: "";
   z-index: 100;
 }
+
 .registration_form_tabs .button_grp .form_tab_btn.active::before {
   border-left-color: var(--erp-gray-200);
 }
@@ -59,6 +60,7 @@
 .registration_form_tabs.button_grp .active:last-child::before {
   display: none;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
