--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html,
 body,
 #root,
@@ -191,6 +192,7 @@ body,
   --erp-lh-400: 1.8;
   --erp-lh-500: 2;
 }
+
 /* Dark mode colors */
 .darkMode,
 [data-erp-theme="dark"] {
@@ -223,12 +225,15 @@ body,
   display: flex;
   position: relative;
 }
+
 .font-size-xxs {
   font-size: var(--erp-fs-xxs);
 }
+
 .fs-xs {
   font-size: var(--erp-fs-xs);
 }
+
 .fs-s {
   font-size: var(--erp-fs-s);
 }
@@ -240,24 +245,31 @@ body,
 .fs-lg {
   font-size: var(--erp-fs-l);
 }
+
 .fs-7 {
   font-size: var(--erp-fs-7);
 }
+
 .fs-13 {
   font-size: var(--erp-fs-13);
 }
+
 .fs-14 {
   font-size: var(--erp-fs-14);
 }
+
 .fs-16 {
   font-size: var(--erp-fs-16);
 }
+
 .fs-17 {
   font-size: var(--erp-fs-17);
 }
+
 .fs-18 {
   font-size: var(--erp-fs-18);
 }
+
 .fs-20 {
   font-size: var(--erp-fs-20);
 }
@@ -282,9 +294,11 @@ body,
 .fw-500 {
   font-weight: var(--erp-fw-500);
 }
-.fw-600{
+
+.fw-600 {
   font-weight: var(--erp-fw-600);
 }
+
 .fw-700 {
   font-weight: var(--erp-fw-700);
 }
@@ -321,13 +335,16 @@ body,
   text-decoration: underline;
   color: var(--erp-black-300);
 }
+
 a {
   text-decoration: none !important;
   color: var(--erp-black-300);
 }
+
 .black_300 {
   color: var(--erp-black-300);
 }
+
 .text-mute {
   color: var(--erp-text-mute) !important;
 }
@@ -335,8 +352,8 @@ a {
 .button_color {
   color: var(--erp-white-color) !important;
 }
-.form-control
-#border_none{
+
+.form-control #border_none {
   border: none;
 }
 
@@ -347,6 +364,7 @@ a {
   box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
   border: 0px;
 }
+
 .card-header {
   padding: 1rem 1rem;
   background-color: var(--erp-white-color);
@@ -359,28 +377,33 @@ a {
   flex: 1 1 auto;
   padding: 1rem 1rem;
 }
+
 .table_icons {
   font-style: normal;
   font-size: 16px !important;
   font-weight: 400;
 }
+
 .table-card {
   margin: -1rem -1rem;
   border: 0px solid;
   border-bottom: 1px solid var(--erp-gray-200);
 }
+
 .table-card td:first-child,
 .table-card th:first-child {
   padding-left: 16px;
 }
 
-.table > thead {
+.table>thead {
   background-color: #f3f6f9;
 }
+
 .table td,
 .table th {
   line-height: 1.5;
 }
+
 .form-control {
   -webkit-appearance: none;
   appearance: none;
@@ -407,12 +430,14 @@ h1 {
   font-size: 1.5rem;
   color: #000;
 }
+
 /* toggle */
 .form-check-input:checked {
   background-color: #878a99;
   border-color: #878a99;
   border: 5px;
 }
+
 .form-check-input:focus {
   border-color: #878a99;
   outline: 0;
@@ -461,6 +486,10 @@ h1 {
   color: var(--erp-text-color) !important;
 }
 
+.error-input {
+  border: 1px solid var(--erp-red-500) !important;
+}
+
 .text_danger {
   color: var(--erp-red-500) !important;
 }
@@ -474,10 +503,12 @@ h1 {
   position: relative;
   padding-left: 44px;
 }
+
 .btn-label.right {
   padding-left: 0.9rem;
   padding-right: 44px;
 }
+
 .btn-label .label-icon {
   position: absolute;
   width: 35.5px;
@@ -496,19 +527,23 @@ h1 {
   -ms-flex-pack: center;
   justify-content: center;
 }
+
 .btn-label.right .label-icon {
   right: 0px;
   left: auto;
 }
+
 .btn-label:hover {
   color: #fff;
   background-color: #2da494 !important;
   border-color: #2da494;
 }
+
 .btn_primary {
   background-color: var(--erp-green-500);
   color: white !important;
 }
+
 .btn_primary:hover {
   background-color: var(--erp-green-600);
 }
@@ -517,12 +552,14 @@ h1 {
 .bg-danger-subtle {
   background-color: #a0add8 !important;
 }
+
 .card_animate {
   transition: all 0.3s linear;
-webkit-box-shadow: 0 1px 2px rgba(56,65,74,.15);
+  webkit-box-shadow: 0 1px 2px rgba(56, 65, 74, .15);
   /* box-shadow: 0px 5px 0px 5px solid var(--erp-gray-color); */
 }
+
 .card_animate:hover {
   transform: translateY(-7px);
-    box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
 }
