--- a/src/components/pages/Inventory/Addassests.css
+++ b/src/components/pages/Inventory/Addassests.css
@@ -1,17 +1,17 @@
 .bg_red{
-    background-color:var(--erp-red-100)
+    background-color:#fde8e4
 }
 .bg_subtle{
-    background-color: var(--erp-sky-200);
+    background-color: #daf4f0;
 }
 .bg_yellow{
-    background-color: var(--erp-yellow-100);
+    background-color: #fef4e4;
 }
 .bg_infosubtle{
-    background-color: var(--erp-blue-400);
+    background-color: #dff0fa;
 }
 .bg_secondary{
-    background-color: var( --erp-violet-100);
+    background-color: #daf4f0;
 }
 .bg_infolight{
     background-color: var(--erp-green-200) ;
